Document Solution H in README
Added section for Solution H (self-attach agent):
  - Branch and running instructions
  - Explanation of dynamic agent loading via Instrumentation API
  - Attach API security limitations and workarounds
  - Comparison table now includes Solution H alongside 1, 2, F

Updated brainstorm table to mark H as implemented.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>